(library
  (name test_dag_fibonacci)
  (modules test_dag_fibonacci)
  (libraries parabstr)
)

(test
  (name test_dag_fibonacci_public)
  (modules test_dag_fibonacci_public)
  (libraries test_dag_fibonacci)
)

(test
  (name test_dag_fibonacci_private)
  (modules test_dag_fibonacci_private)
  (libraries test_dag_fibonacci)
)
