(library
  (name test_domain_pool_fibonacci)
  (modules test_domain_pool_fibonacci)
  (libraries parabstr)
)

(test
  (name test_domain_pool_fibonacci_public)
  (modules test_domain_pool_fibonacci_public)
  (libraries test_domain_pool_fibonacci)
)

(test
  (name test_domain_pool_fibonacci_private)
  (modules test_domain_pool_fibonacci_private)
  (libraries test_domain_pool_fibonacci)
)
